--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <button type="submit" class="btn btn-primary" id="botaoEnviar">Enviar</button>
     <br>
 
-    <p class="paragrafo">Não possui conta? <a href="formulario.php" c>Cadastrar-se</a></p>
+    <p class="paragrafo">Não possui conta? <a href="formulario.html" c>Cadastrar-se</a></p>
     
   </form>
 </body>
