--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <label for="exampleInputPassword1" class="form-label">Senha</label>
       <input type="password" name="senha" class="form-control" placeholder="Digite sua senha" id="exampleInputPassword1">
     </div>
-    <button type="submit" class="btn btn-primary" id="botaoEnviar" href="formulario.html" >Enviar</button>
+    <button type="submit" class="btn btn-primary" id="botaoEnviar">Enviar</button>
     <br>
 
     <p class="paragrafo">Não possui conta? <a href="formulario.html" c>Cadastrar-se</a></p>
